Fix screen height on mobile and add PWA manifest

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -4,6 +4,14 @@
 
 body,
 #root {
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
+  background-color: #EFF6FF;
+}
+
+@media (prefers-color-scheme: dark) {
+  body,
+  #root {
+    background-color: #293132;
+  }
 }
